--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.4.0",
   "description": "SDK for working with different blockchains",
   "license": "GPLv3",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "dist"
+    "lib"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,8 @@
   },
   "homepage": "https://github.com/blueshift-fi/crypto-sdk#readme",
   "keywords": [
-    "Cardano",
-    "Milkomeda"
+    "cardano",
+    "milkomeda"
   ],
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^9.1.4",
