--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "strictNullChecks": true,
     "target": "es5", 
-    "outDir": "dist",
+    "outDir": "lib",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -21,5 +21,5 @@
     "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "lib"]
 }
