--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^9.1.4",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "ethers": "^5.6.9"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
