--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crypto-sdk",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "SDK for working with different blockchains",
   "license": "GPLv3",
   "main": "lib/index.js",
@@ -25,8 +25,10 @@
   ],
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^9.1.4",
+    "@dcspark/cardano-multiplatform-lib-browser": "^3.1.1",
     "buffer": "^6.0.3",
-    "ethers": "^5.6.9"
+    "ethers": "^5.7.2",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
