--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "strictNullChecks": true,
-    "target": "es5", 
+    "target": "esnext", 
     "outDir": "lib",
     "module": "commonjs",
     "moduleResolution": "node",
