--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crypto-sdk",
-  "version": "0.5.19",
+  "version": "0.5.20",
   "description": "SDK for working with different blockchains",
   "license": "GPLv3",
   "main": "lib/index.js",
@@ -31,13 +31,9 @@
     "zod": "^3.23.5"
   },
   "devDependencies": {
-    "@emurgo/cardano-serialization-lib-browser": "^9.1.4",
-    "@types/node": "^18.19.31",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "buffer": "^6.0.3",
-    "eslint": "^8.57.0",
-    "ethers": "^5.7.2",
-    "zod": "^3.23.5"
+    "@types/node": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0"
   }
 }
