Rollback dependencies and Typescript version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "crypto-sdk",
-  "version": "0.5.22",
+  "version": "0.5.23",
   "description": "SDK for working with different blockchains",
   "license": "GPLv3",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "lib",
-    "custom_modules"
+    "lib"
   ],
   "scripts": {
     "build": "tsc",
@@ -25,15 +24,15 @@
   ],
   "dependencies": {
     "@dcspark/cardano-multiplatform-lib-browser": "^3.1.1",
-    "@emurgo/cardano-serialization-lib-browser": "^11.4.0",
+    "@emurgo/cardano-serialization-lib-browser": "^9.1.4",
     "buffer": "^6.0.3",
-    "ethers": "^5.7.2",
-    "zod": "^3.21.0"
+    "ethers": "^5.6.9"
   },
   "devDependencies": {
-    "@types/node": "^18.0.1",
+    "@types/node": "^16.18.96",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0"
+    "eslint": "^8.19.0",
+    "zod": "3.20.2"
   }
 }
